<resources>
    <string name="app_name">Papi Tambal Ban</string>
    <string name="e_mail">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">Lets join us and Build realtionship with others</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="swipe_right_for_login">Swipe Right to Login</string>
    <string name="todo">TODO</string>
    <string name="product_name">product name</string>
    <string name="price">price</string>
    <string name="insert">insert</string>
    <string name="search_result">Result . . .</string>
    <string name="search_here">Search Here</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="pilihdarikategori">Pilih dari kategori</string>
    <string name="dash">-</string>
    <string name="rating">Rating</string>
    <string name="logout">Logout</string>
    <string name="comentars">Comentars</string>
    <string name="following">Following</string>
    <string name="app_name_24_jam">Tambal Ban 24 Jam</string>
</resources>
