<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvList"
        android:layout_width="match_parent"
        android:layout_marginTop="-20dp"
        app:cardCornerRadius="@dimen/val20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/val8dp"
            android:layout_width="match_parent"
            android:padding="@dimen/val5dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/logo_tambal_ban"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/ivFotoProfil"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/val20dp"
                    android:layout_marginLeft="@dimen/pad10"
                    android:id="@+id/tvUserLogin"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfil"
                    app:layout_constraintTop_toTopOf="parent"/>
                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@+id/tvUserLogin"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/val8dp"
                    android:layout_marginLeft="@dimen/pad10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_map" />

                    <TextView
                        android:id="@+id/tvJarak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/val5dp"
                        android:layout_marginLeft="@dimen/val5dp"
                        android:text="@string/app_name" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/svTb"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tvsearchHere"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad10"
                android:text="@string/search_here" />
            <SearchView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/svTb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/svTb"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tvSearchResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad10"
                android:text="@string/search_result" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cvList"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/rvListTb"/>



</androidx.constraintlayout.widget.ConstraintLayout>