<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/val60dp"
    tools:context=".fragments.ListFragment">

    <LinearLayout
        android:id="@+id/cvListList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:background="@drawable/bg_custom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/val8dp"
            android:orientation="vertical"
            android:padding="@dimen/val5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/pad10"
                android:layout_marginRight="@dimen/val30dp"
                android:layout_marginLeft="@dimen/val30dp"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivFotoProfilList"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logoputih"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvUserLoginList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad10"
                    android:layout_marginTop="@dimen/pad10"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfilList"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad10"
                    android:layout_marginTop="@dimen/val8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfilList"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserLoginList">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_map_white" />

                    <TextView
                        android:id="@+id/tvJarakList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/val5dp"
                        android:layout_marginLeft="@dimen/val5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/val30dp"
                android:layout_marginRight="@dimen/val30dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvsearchHereList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pad10"
                    android:text="@string/search_here"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/svTb" />

                <SearchView
                    android:id="@+id/svTbList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvsearchHereList" />

                <TextView
                    android:id="@+id/tvSearchResultList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/pad10"
                    android:text="@string/search_result"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/svTb" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListTbList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad10"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvListList" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/val150dp"
        android:progressBackgroundTint="@color/black"
        android:progressTint="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvListList" />

</androidx.constraintlayout.widget.ConstraintLayout>