<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBiruBack"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="match_parent"
        android:layout_marginTop="-20dp"
        android:orientation="vertical"
        android:background="@drawable/bg_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/val8dp"
            android:layout_width="match_parent"
            android:padding="@dimen/val5dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/val20dp"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivFotoProfilHome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logoabu"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pad10"
                    android:layout_marginLeft="@dimen/pad10"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tvUserLoginHome"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfilHome"
                    app:layout_constraintTop_toTopOf="parent"/>
                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@+id/tvUserLoginHome"
                    app:layout_constraintStart_toEndOf="@+id/ivFotoProfilHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/val8dp"
                    android:layout_marginLeft="@dimen/pad10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_map_white" />

                    <TextView
                        android:id="@+id/tvJarakHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/val5dp"
                        android:layout_marginLeft="@dimen/val5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/svTb"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tvsearchHereHome"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/pad10"
                android:text="@string/search_here" />
            <SearchView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/svTbHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/svTb"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tvSearchResultHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad10"
                android:layout_marginBottom="@dimen/pad10"
                android:textColor="@color/colorWhite"
                android:text="@string/search_result" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilihdarikategori"
        android:layout_margin="@dimen/pad10"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_marginTop="@dimen/pad10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btn24Jam"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/pad10"
                android:layout_marginRight="@dimen/val5dp"
                app:cardCornerRadius="@dimen/val20dp">

                <ImageView
                    android:src="@drawable/ic_24jam"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/pad10"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/val5dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="24 Jam"
                android:textSize="@dimen/sp16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnTerdekat"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/val5dp"
                android:layout_marginRight="@dimen/pad10"
                app:cardCornerRadius="@dimen/val20dp">

                <ImageView
                    android:src="@drawable/ic_nearby"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/pad10"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/val5dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="Terdekat"
                android:textSize="@dimen/sp16"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>